@@ -24,6 +24,9 @@ VERSION 3.14-872
     plugins "pat", "pmt", "bat", "sdt", "nit".
   * Added option --wide-display to command "tsanalyze" and plugin "analyze".
   * Added option --min-interval to command "tsstuff".
+  * In plugin "inject", when all input files have specific repetition rates,
+    it is no longer required to provide a bitrate for the PID. It is computed
+    from the size and repetition rate of all sections.
 
 [BUG] Bug fixes:
 
